feat: Ajuste na API para que fique mais funcional e clara, e alteração de nomes de alguns arquivos que não estavam condizentes.
